# fastapi-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 02cc34045e51_init.py  f46541cbf198_initial_migration.py
docker_compose/: app.yaml  storage.yaml
src/: main.py
src/api/: router.py
src/api/v1/: router.py
src/common/: config.py  database.py  dependencies.py  permissions.py  security.py  settings.py
src/config/: dependencies.py  settings.py
src/db/: init_db.py  init_superuser.py  run_migrations.py  session.py
src/features/users/: dependencies.py
src/features/users/api/: auth_routes.py  user_routes.py
src/features/users/models/: user_models.py  user_repository.py
src/features/users/schemas/: user_schema.py
src/features/users/services/: auth_service.py  user_service.py
src/modules/auth/: api.py  dependencies.py
src/modules/auth/api/: dependencies.py  router.py  schemas.py
src/modules/auth/application/: access_control.py  auth_service.py  dto.py  refresh_service.py  use_cases.py
src/modules/auth/domain/: entities.py  exceptions.py  interfaces.py  models.py  permissions.py  roles.py  (+1 more)
src/modules/items/: models.py
src/modules/payments/: crud.py  models.py  routes.py  schemas.py  services.py
src/modules/users/: api.py  auth.py  auth_service.py  crud.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py
src/users/: models.py  routes.py  schemas.py  services.py
(+16 files in other folders)
